--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 
 <head>
     <link href="style.css" rel="stylesheet">
-    <title>Your name resume</title>
+    <title>BENEDICT KALELI-resume</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 
 <body>
     <header id="header">
         <!-- resume header with your name and title -->
-        <h1>YOUR NAME</h1>
+        <h1>BENEDICT KALELI</h1>
         <hr>
-        YOUR TITLE
+        WEB DEVELOPER
         <hr>
     </header>
     <main>
@@ -21,55 +21,55 @@
                 <!-- contact info including social media -->
                 <p>
                     <i class="fa fa-envelope" aria-hidden="true"></i>
-                    <a href="mailto:your-email@example.com">your-email@example.com</a>
+                    <a href="mailto:benedictmaundu2000@gmail.com">benedictmaundu2000@gmail.com</a>
                 </p>
                 <p>
                     <i class="fab fa-github" aria-hidden="true"></i>
-                    <a href="github.com/gh-username">gh-username</a>
+                    <a href="https://github.com/Benedictkay">Benedictkay</a>
                 </p>
                 <p>
                     <i class="fab fa-linkedin" aria-hidden="true"></i>
-                    <a href="linkedin.com/linkedin-username">linkedin-username</a>
+                    <a href="https://www.linkedin.com/in/benedict-kaleli-11a58a221/">Benedict Kaleli</a>
                 </p>
             </section>
             <section>
                 <h2>SKILLS</h2>
                 <!-- your skills -->
-                <p>HTML, CSS, GitHub, VS Code...</p>
+                <p>HTML, CSS, GitHub, javascript, Git/Github...</p>
             </section>
             <section>
                 <h2>EDUCATION</h2>
                 <!-- your education -->
-                <h3>YOUR MAJOR</h3>
+                <h3> Bsc. Information Technology</h3>
                 <p>
-                    Your university or school
+                    MASENO UNIVERSITY
                 </p>
                 <p>
-                    2018-2022
+                    2020-2024
                 </p>
             </section>
         </article>
         <article id="mainRight">
             <section>
-                <h2>ABOUT</h2>
+                <h2>MY BIO</h2>
                 <!-- about you -->
-                <p>A brief paragraph about you and what kind of company you want to work for.</p>
+                <p>Hello, im benedict , a junior web developer. i'm focused on creating websites and sytems to improve the society
+                    .</p>
             </section>
             <section>
                 <h2>WORK EXPERIENCE</h2>
                 <!-- your work experience -->
-                <h3>JOB TITLE</h3>
+                <h3>WEB DEVELOPMENT MENTEE</h3>
                 <p>
-                    Company Name | 2008 - 2010
+                    Koding & kahawa community | June 2022 - October 2022
                 </p>
                 <p>
-                    Describe what you did in this position with one summary sentence and no more than 3 bullet points
-                    with specific highlights
+                    under mentorship I have been able to come up with my portfolio and resume.
                 </p>
                 <ul>
-                    <li>Cool accomplishment</li>
-                    <li>Cool accomplishment</li>
-                    <li>Cool accomplishment</li>
+                    <li>created my Portfolio</li>
+                    <li>Created Github account</li>
+                
                 </ul>
             </section>
         </article>
