--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <section>
                 <h2>MY BIO</h2>
                 <!-- about you -->
-                <p>Hello, im benedict , a junior web developer. i'm focused on creating websites and sytems to improve the society
+                <p>Hello, im benedict , a junior passionate web developer. i'm strong and focused on creating websites and sytems to improve the society. I spend my whole day, practically every day, experimenting with HTML, CSS, and JavaScript; 
                     .</p>
             </section>
             <section>
